--- a/src/app/customUI/dialogs/assigned-to/assigned-to.component.html
+++ b/src/app/customUI/dialogs/assigned-to/assigned-to.component.html
@@ -18,7 +18,7 @@
         <div class="col-xs-12 col-md-12 noPadding">
           <div class="checkbox">
             <input id="checkbox1" type="checkbox">
-            <label class="rememberM" for="checkbox1">Don't show me again</label>
+            <label class="rememberM" for="checkbox1" (change)="dontShowAgainChanged($event)">Don't show me again</label>
           </div>
         </div>
 
