--- a/src/app/customUI/dialogs/download-pdf/download-pdf.component.html
+++ b/src/app/customUI/dialogs/download-pdf/download-pdf.component.html
@@ -16,7 +16,7 @@
 
         <div class="col-xs-12 col-md-12 noPadding">
           <div class="checkbox">
-            <input id="checkbox1" type="checkbox">
+            <input id="checkbox1" type="checkbox" (change)="dontShowAgainChanged($event)">
             <label class="rememberM" for="checkbox1">Don't show me again</label>
           </div>
         </div>
