--- a/src/app/customUI/entity-name-header/entity-name-header.component.html
+++ b/src/app/customUI/entity-name-header/entity-name-header.component.html
@@ -5,7 +5,7 @@
   {{entityModel.name}}
 </div> -->
 
-<div class="tabIndcation" *ngIf="entityModel || loadedItemsTag!=''">
+<div class="tabIndcation container" *ngIf="entityModel || loadedItemsTag!=''">
   <div class="row">
     <div class="col-xs-12 col-md-12 noPadding" style="background: #fff;">
       <div class="topAgent_wp">
