--- a/src/app/views/agent/agent-associates/agent-associates.component.html
+++ b/src/app/views/agent/agent-associates/agent-associates.component.html
@@ -1,12 +1,14 @@
 <div class="container-fluid nospace">
-  <div class="nav-bg wrapper-back">
-    <div id="detail-page-header">
-      <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
-      <div class="col-xs-8 text-center">
-        <h1 class="t-agent">Associates</h1>
+  <div class="wrapper-back">
+    <div class="container nav-bg">
+      <div id="detail-page-header">
+        <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
+        <div class="col-xs-8 text-center">
+          <h1 class="t-agent">Associates</h1>
+        </div>
+        <div class="col-xs-2 text-right toppad"><a (click)="onRecentProfileClick()" alt="" data-toggle="modal"
+            data-target="#recentAssociatesl"><img src="../../../../images/baseline-history.svg" alt=""></a></div>
       </div>
-      <div class="col-xs-2 text-right toppad"><a (click)="onRecentProfileClick()" alt="" data-toggle="modal"
-          data-target="#recentAssociatesl"><img src="../../../..//images/baseline-history.svg" alt=""></a></div>
     </div>
     <app-entity-name-header [entityModel]="entityModel"></app-entity-name-header>
   </div>
@@ -19,10 +21,11 @@
             <div class="agent-detail-associates">
               <div class="dp">
                 <img src="../../../../images/ic_note_profile.svg" alt="" (click)="onPersonClick(item)" />
-                <div class="dpProfile_wp proActiBg">A</div>
+                <div class="dpProfile_wp proActiBg">{{item.stat}}</div>
               </div>
-              <h4>{{item.dispname}} <span>({{item.personID}})</span></h4> <span>{{getAddress(item)}}</span> <span
-                class="date">{{item.effectiveDate}}</span>
+              <h4>{{item.dispname}} <span>({{item.personID}})</span></h4>
+               <span class="paddingTop5">{{getAddress(item)}}</span>
+                <span class="date">{{item.effectiveDate | slice:0:10}}</span>
               <div class="clearfix"></div>
               <div class="row">
                 <div class="col-md-12 col-xs-12" *ngIf="entityModel.type == P">
