--- a/src/app/views/agent/agent-notes/agent-notes.component.html
+++ b/src/app/views/agent/agent-notes/agent-notes.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid nospace">
   <div class="wrapper-back">
-    <div class="nav-bg">
+    <div class="container nav-bg">
       <div id="detail-page-header">
 
         <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
