--- a/src/app/views/agent/agent-objective/agent-objective.component.html
+++ b/src/app/views/agent/agent-objective/agent-objective.component.html
@@ -1,9 +1,11 @@
 <div class="container-fluid nospace">
-  <div class="container nav-bg wrapper">
-    <div class="row">
-      <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
-      <div class="col-xs-7 text-center">
-        <h1 class="t-agent">Objective</h1>
+  <div class="wrapper-back">
+    <div class="container nav-bg">
+      <div class="row">
+        <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
+        <div class="col-xs-7 text-center">
+          <h1 class="t-agent">Objective</h1>
+        </div>
       </div>
     </div>
   </div>
