--- a/src/app/views/agent/agent-thirteen-month-activity/agent-thirteen-month-activity.component.html
+++ b/src/app/views/agent/agent-thirteen-month-activity/agent-thirteen-month-activity.component.html
@@ -1,13 +1,14 @@
 <div class="container-fluid nospace">
-
-  <div class="nav-bg wrapper-back">
-    <div id="detail-page-header">
-      <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
-      <div class="col-xs-8 text-center">
-        <h1 class="t-agent">13 Month Activity</h1>
+  <div class="wrapper-back">
+    <div class="nav-bg container">
+      <div id="detail-page-header">
+        <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
+        <div class="col-xs-8 text-center">
+          <h1 class="t-agent">13 Month Activity</h1>
+        </div>
+        <div class="col-xs-2 text-right toppad"><a (click)="onRecentProfileClick()" alt="" data-toggle="modal"
+            data-target="#recentAssociatesl"><img src="../../../../images/baseline-history.svg" alt=""></a></div>
       </div>
-      <div class="col-xs-2 text-right toppad"><a (click)="onRecentProfileClick()" alt="" data-toggle="modal"
-          data-target="#recentAssociatesl"><img src="../../../../images/baseline-history.svg" alt=""></a></div>
     </div>
     <app-entity-name-header [entityModel]="entityModel"></app-entity-name-header>
   </div>
@@ -46,7 +47,8 @@
                   <div class="clear paddingTop10"></div>
                   <div class="row">
                     <div class="col-md-6 col-xs-6">
-                      <div class="amount">NPR % of Plan<br><span currencyMask>{{item.nprPercent==''?'0':item.nprPercent|number:'1.1-1'}}%</span>
+                      <div class="amount">NPR % of Plan<br><span
+                          currencyMask>{{item.nprPercent==''?'0':item.nprPercent|number:'1.1-1'}}%</span>
                       </div>
                     </div>
                     <div class="col-md-6 col-xs-6">
@@ -61,7 +63,8 @@
                         Plan<br><span>{{item.cplPlanned| currency:'USD':"symbol-narrow":'1.0-0'}}</span></div>
                     </div>
                     <div class="col-md-6 col-xs-6">
-                      <div class="amount">CPL % of Plan<br><span>{{item.cplPercent==''?'0':item.cplPercent|number:'1.1-1'}}%</span></div>
+                      <div class="amount">CPL % of
+                        Plan<br><span>{{item.cplPercent==''?'0':item.cplPercent|number:'1.1-1'}}%</span></div>
                     </div>
                   </div>
                 </div>
