--- a/src/app/views/agent/agent-detail/agent-detail.component.html
+++ b/src/app/views/agent/agent-detail/agent-detail.component.html
@@ -3,8 +3,8 @@
     <div class="col-xs-12 col-md-12 cell-bg">
       <div class="agent-detail ">
         <div class="dp">
-          <div class="badge bd-col">A</div><img src={{agentInfo.agentImg}}
-            onerror="this.src='../../../../images/placeholder.png'" alt="" />
+          <img src="../../../../../../images/baseline-business-24px.svg" alt="" />
+          <div class="dpProfile_wp proActiBg">{{agentInfo.stat}}</div>
         </div>
         <h4>{{agentInfo.name}}<a><img
               src="{{checkEntityFavorite()?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}"
