--- a/src/app/views/agent/contact-detail/contact-detail.component.html
+++ b/src/app/views/agent/contact-detail/contact-detail.component.html
@@ -1,13 +1,16 @@
 <div class="container-fluid nospace">
-  <div class="nav-bg wrapper-back">
-    <div id="detail-page-header">
+  <div class=" wrapper-back">
+    <div class="container nav-bg">
+      <div id="detail-page-header">
 
-      <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
-      <div class="col-xs-7 text-center">
-        <h1 class="t-agent">Contact</h1>
+        <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
+        <div class="col-xs-7 text-center">
+          <h1 class="t-agent">Contact</h1>
+        </div>
+        <div class="col-xs-3 text-center tpad" data-toggle="modal" data-target="#myModal"
+          (click)="onEditProfileClick()">
+          <img src="../../../../images/edit.svg" alt=""><br><span class="edit-detail"><a>Edit Details</a></span></div>
       </div>
-      <div class="col-xs-3 text-center tpad" data-toggle="modal" data-target="#myModal" (click)="onEditProfileClick()">
-        <img src="../../../../images/edit.svg" alt=""><br><span class="edit-detail"><a>Edit Details</a></span></div>
     </div>
     <app-entity-name-header [entityModel]="entityModel"></app-entity-name-header>
   </div>
@@ -34,7 +37,7 @@
           <h4>Address</h4> <span class="ag-add">{{getAddress()}}</span>
           <div class="clearfix"></div>
           <div class="state">State<br> <span>{{entityContactModel.state}}</span></div>
-          <div class="state">Pin Code<br><span>{{entityContactModel.zip}}</span></div>		
+          <div class="state">Pin Code<br><span>{{entityContactModel.zip}}</span></div>
         </div>
       </div>
 
@@ -76,7 +79,8 @@
           </div>
           <div class="col-xs-4 col-md-4 noPadding">
             <div class="ag-detail-icons">
-              <a (click)="copyText(entityContactModel.email)" alt=""><img src="../../../../images/copy.svg" alt=""> Copy</a>
+              <a (click)="copyText(entityContactModel.email)" alt=""><img src="../../../../images/copy.svg" alt="">
+                Copy</a>
             </div>
           </div>
 
