--- a/src/app/views/dashboard/recent-profiles/agents-profile/agents-profile.component.html
+++ b/src/app/views/dashboard/recent-profiles/agents-profile/agents-profile.component.html
@@ -3,36 +3,32 @@
   <div id="agentsId" class="tab-pane fade in active">
     <div class="clearfix paddingTop10"></div>
     <div class="row">
-      <div class="col-xs-12 col-md-6 cell-bg">
-        <div class="agent-detail paddingRight">
-          <div class="dp">
-            <img src="images/baseline-business-24px.svg" alt="" />
-            <!-- <div class="dpProfile_wp proActiBg">A</div> -->
-          </div>
-          <h4>NETCO. Inc <span>(Agent ID)</span></h4> <span>Las Vegas, NV</span>
-        </div>
+      <ul>
+        <li *ngFor="let item of recentProfileArray; let i = index;">
+          <div class="col-xs-12 col-md-6 cell-bg">
+            <div class="agent-detail ag-perform">
+              <div class="dp" (click)="onItemClick(item)">
+                <img
+                  src="{{item.type=='A'?'../../../../../../images/baseline-business-24px.svg':'../../../../../../images/username.svg'}}"
+                  alt="" />
+                <div class="dpProfile_wp proActiBg">{{item.stat}}</div>
+              </div>
 
-      </div>
+              <h4 class="topAgentsName"><a (click)="onItemClick(item)">{{item.name}}</a>
+                <span (click)="onItemClick(item)"> ({{item.entityId}})</span>
+                <div class="clearfix paddingTop10"></div>
+                <span>{{getAddress(item)}}</span>
+              </h4>
+              <a class="favouritIconPosition"><img
+                  src="{{checkEntityFavorite(item)?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}"
+                  alt="" (click)="onStarClick(item)"></a>
 
-      <div class="col-xs-12 col-md-6 cell-bg">
-        <div class="agent-detail paddingRight">
-          <div class="dp">
-            <img src="images/baseline-business-24px.svg" alt="" />
-            <!-- <div class="dpProfile_wp proActiBg">A</div> -->
+              <div class="clearfix"></div>
+            </div>
           </div>
-          <h4>Clark, Partington, Hart & Hart LLC <span> (017379)</span></h4> <span>A, AL</span>
-        </div>
-      </div>
 
-      <div class="col-xs-12 col-md-6 cell-bg">
-        <div class="agent-detail paddingRight">
-          <div class="dp">
-            <img src="images/baseline-business-24px.svg" alt="" />
-            <!-- <div class="dpProfile_wp proActiBg">A</div> -->
-          </div>
-          <h4>DHI Title of Alabama, Inc. <span>(017340)</span></h4> <span>P, AL</span>
-        </div>
-      </div>
+        </li>
+      </ul>
 
     </div>
 
