--- a/src/app/views/dashboard/recent-profiles/recent-profiles.component.html
+++ b/src/app/views/dashboard/recent-profiles/recent-profiles.component.html
@@ -1,12 +1,17 @@
-<div style="background: #F2F2F2">
+<div class="container-fluid nospace">
+  <div class="container app-bg2">
+    <div style="background: #F2F2F2">
 
-  <mat-tab-group mat-align-tabs="center" animationDuration="500ms">
-    <mat-tab label="Agents">
-      <app-agents-profile></app-agents-profile>
-    </mat-tab>
-    <mat-tab label="Persons">
-      <app-persons-profile></app-persons-profile>
-    </mat-tab>
+      <mat-tab-group  mat-align-tabs="center" animationDuration="500ms"
+        (selectedTabChange)="onTabSelect($event)">
+        <mat-tab label="Agents">
+          <app-agents-profile></app-agents-profile>
+        </mat-tab>
+        <mat-tab label="Persons">
+          <app-persons-profile></app-persons-profile>
+        </mat-tab>
 
-  </mat-tab-group>
+      </mat-tab-group>
+    </div>
+  </div>
 </div>
