--- a/src/app/views/entity/audits/audits.component.html
+++ b/src/app/views/entity/audits/audits.component.html
@@ -1,12 +1,14 @@
 <div class="container-fluid nospace">
-  <div class="nav-bg wrapper-back">
-    <div id="detail-page-header">
+  <div class="wrapper-back">
+    <div class="container nav-bg">
+      <div id="detail-page-header">
 
-      <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
-      <div class="col-xs-7 text-center">
-        <h1 class="t-agent">Audits</h1>
+        <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
+        <div class="col-xs-7 text-center">
+          <h1 class="t-agent">Audits</h1>
+        </div>
+
       </div>
-
     </div>
     <app-entity-name-header [entityModel]="entityModel"></app-entity-name-header>
   </div>
