--- a/src/app/views/entity/claims-detail/claims-detail.component.html
+++ b/src/app/views/entity/claims-detail/claims-detail.component.html
@@ -1,13 +1,14 @@
 <div class="container-fluid nospace">
-  <div class="nav-bg wrapper-back">
-    <div id="detail-page-header">
+  <div class="wrapper-back">
+    <div class="container nav-bg">
+      <div id="detail-page-header">
 
-      <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
-      <div class="col-xs-7 text-center">
-        <h1 class="t-agent">Claims</h1>
+        <div class="col-xs-2 toppad"><a (click)="goBack()"><img src="../../../../images/back-btn.svg" alt=""></a></div>
+        <div class="col-xs-8 text-center">
+          <h1 class="t-agent">Claim Details</h1>
+        </div>
+        <div class="col-xs-2 text-right toppad"></div>
       </div>
-      <div class="col-xs-3 text-center tpad"><img src="../../../../images/filter.svg" alt=""><br><span
-          class="edit-detail"><a data-toggle="modal" data-target="#filterPopupClaims">Filter</a></span></div>
     </div>
     <app-entity-name-header [entityModel]="entityModel"></app-entity-name-header>
   </div>
@@ -183,7 +184,7 @@
       <div class="col-xs-12 col-md-12 noPadding">
         <div class="buttonFooter_wp"><button type="button" class="btn btn-primary footerBtn"
             (click)="onDownloadPdfClick()">
-            <img src="../../../../images/ic_pdf_common.svg" alt=""> DownLoad PDF
+            <img src="../../../../images/ic_pdf_common.svg" alt=""> DownLoad Claim Detail PDF
           </button>
         </div>
       </div>
