--- a/src/app/views/entity/claims/claims.component.html
+++ b/src/app/views/entity/claims/claims.component.html
@@ -1,13 +1,15 @@
 <div class="container-fluid nospace">
-  <div class="nav-bg wrapper-back">
-    <div id="detail-page-header">
+  <div class="wrapper-back">
+    <div class="container nav-bg">
+      <div id="detail-page-header">
 
-      <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
-      <div class="col-xs-7 text-center">
-        <h1 class="t-agent">Claims</h1>
+        <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
+        <div class="col-xs-7 text-center">
+          <h1 class="t-agent">Claims</h1>
+        </div>
+        <div class="col-xs-3 text-center tpad"><img src="../../../../images/filter.svg" alt=""><br><span
+            class="edit-detail"><a data-toggle="modal" data-target="#filterPopupClaims">Filter</a></span></div>
       </div>
-      <div class="col-xs-3 text-center tpad"><img src="../../../../images/filter.svg" alt=""><br><span
-          class="edit-detail"><a data-toggle="modal" data-target="#filterPopupClaims">Filter</a></span></div>
     </div>
     <app-entity-name-header [entityModel]="entityModel"></app-entity-name-header>
   </div>
@@ -18,7 +20,8 @@
         <li *ngFor="let item of claimsModels" (click)="onClaimSelected(item)">
           <div class="col-xs-12 col-md-6 cell-bg">
             <div class="agent-detail ag-perform">
-              <h4>{{item.claimID}} <span class="textRight">Status: {{getStatus(item.stat)}}</span></h4>
+              <h4>{{item.claimID}} <span class="textRight">Status: {{item.stat}}</span></h4>
+              <span class="totalPostedCostText">Total Posted Cost</span><br>
               <span class="textDoller">{{item.LossAmmount | currency:'USD':"symbol-narrow":'1.0-0'}}</span>
               <div class="clearfix"></div>
               <div class="paddingTop5"></div>
