--- a/src/app/views/entity/entity-alert/entity-alert.component.html
+++ b/src/app/views/entity/entity-alert/entity-alert.component.html
@@ -1,9 +1,11 @@
 <div class="container-fluid nospace">
-  <div class="nav-bg wrapper-back">
-    <div id="detail-page-header">
-      <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
-      <div class="col-xs-8 text-center">
-        <h1 class="t-agent">Open Alerts</h1>
+  <div class="wrapper-back">
+    <div class="container nav-bg">
+      <div id="detail-page-header">
+        <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
+        <div class="col-xs-8 text-center">
+          <h1 class="t-agent">Open Alerts</h1>
+        </div>
       </div>
     </div>
     <app-entity-name-header [entityModel]="entityModel"></app-entity-name-header>
