--- a/src/app/views/person/person-detail/person-detail.component.html
+++ b/src/app/views/person/person-detail/person-detail.component.html
@@ -3,25 +3,22 @@
     <div class="col-xs-12 col-md-12 cell-bg">
       <div class="agent-detail ">
         <div class="dp">
-          <div class="badge bd-col">P</div><img src={{personInfo.agentImg}}
-            onerror="this.src='../../../../images/placeholder.png'" alt="" />
+          <img src="../../../../../../images/username.svg" alt="" />
+          <div class="dpProfile_wp proActiBg">{{personInfo.stat}}</div>
         </div>
         <h4>{{personInfo.name}}<a><img
               src="{{checkEntityFavorite()?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}"
               alt="" (click)="onStarClick()"></a></h4> <span
           class="building-icon padding-left-twenty-five">{{personInfo.entityId}}</span>
         <div class="clearfix"></div>
-        <!-- <div class="amount bx1"><span>Net Premium</span><br>$ {{agentInfo.netPermium}}</div>
-        <div class="amount bx2"><span><img src="../../../../images/share.svg" alt="" (click)="sendVCard()" /></span>
-        </div>
-        <div class="amount bx3"><span><img src="../../../../images/doc.svg" alt=""
-              (click)="openLocationOnMap()" /></span></div> -->
+
       </div>
     </div>
 
     <div class="col-xs-12 col-md-12">
       <ul class="agent-details">
-        <li *ngFor="let item of personMenues" class="{{item.class}}" (click)="onPersonMenuClick(item)"><a>{{item.title}}</a></li>
+        <li *ngFor="let item of personMenues" class="{{item.class}}" (click)="onPersonMenuClick(item)">
+          <a>{{item.title}}</a></li>
       </ul>
     </div>
   </div>
