--- a/src/cssFiles/style.css
+++ b/src/cssFiles/style.css
@@ -1360,89 +1360,7 @@ input:checked+.slider:before {
 
 }
 
-
-/* checkbox css Beginning here */
-
-.checkbox {
-  padding-left: 20px;
-}
-
-.checkbox label {
-  display: inline-block;
-  position: relative;
-  padding-left: 5px;
-}
-
-.checkbox label::before {
-  content: "";
-  display: inline-block;
-  position: absolute;
-  width: 17px;
-  height: 17px;
-  left: 0;
-  margin-left: -20px;
-  border: 1px solid #cccccc;
-  border-radius: 3px;
-  background-color: #fff;
-  -webkit-transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
-  -o-transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
-  transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
-}
-
-.checkbox label::after {
-  display: inline-block;
-  position: absolute;
-  width: 16px;
-  height: 16px;
-  left: 0;
-  top: 0;
-  margin-left: -20px;
-  padding-left: 3px;
-  padding-top: 1px;
-  font-size: 11px;
-  color: #555555;
-}
-
-.checkbox input[type="checkbox"] {
-  opacity: 0;
-}
-
-.checkbox input[type="checkbox"]:focus+label::before {
-  outline: thin dotted;
-  outline: 5px auto -webkit-focus-ring-color;
-  outline-offset: -2px;
-}
-
-.checkbox input[type="checkbox"]:checked+label::after {
-  font-family: 'FontAwesome';
-  content: "\f00c";
-}
-
-.checkbox input[type="checkbox"]:disabled+label {
-  opacity: 0.65;
-}
-
-.checkbox input[type="checkbox"]:disabled+label::before {
-  background-color: #eeeeee;
-  cursor: not-allowed;
-}
-
-.checkbox.checkbox-circle label::before {
-  border-radius: 50%;
-}
-
-.checkbox.checkbox-inline {
-  margin-top: 0;
-}
-
-.checkbox label.rememberMe {
-  font-size: 14px;
-}
-
-/* checkbox css end here */
-
-
-/* checkbox new css Beginning here */
+/* Login page Custom checkbox css Beginning here */
 
 .containerBox {
   display: block;
@@ -1513,8 +1431,68 @@ input:checked+.slider:before {
   transform: rotate(45deg);
 }
 
-/* checkbox new css end here */
+/* Login page Custom checkbox css ind here */
 
+
+/* Inner page Custom checkbox css beginning here */
+
+.containerBoxCustom {
+  display: block;
+  position: relative;
+  padding-left: 30px;
+  margin-bottom: 30px;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: normal;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  color:#000;
+}
+
+/* Hide the browser's default checkbox */
+.containerBoxCustom input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmarkCustom {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height:16px;
+  width:16px;
+  /* background-color: #eee; */
+  border: solid 1px #F68933;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmarkCustom:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.containerBoxCustom input:checked~.checkmarkCustom:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.containerBoxCustom .checkmarkCustom:after {
+  left:2px;
+  top:2px;
+  width: 10px;
+  height: 10px; 
+  border-width: 2px 2px 2px 2px;
+  background: #F68933;
+}
+/* Inner page Custom checkbox css end here */
 
 
 .recent-wp .icon-wp {
@@ -1936,7 +1914,7 @@ button:focus {
 }
 
 .paddingTop85 {
-  padding-top: 100px;
+  padding-top: 115px;
 }
 
 .tabIndcation {
@@ -1977,7 +1955,7 @@ input:-internal-autofill-selected {
 }
 
 .mb-5 {
-  margin-bottom: 5px;
+  margin-bottom: 5px !important;
 }
 
 
