added change password ui

--- a/src/app/views/dashboard/ProfileAndSetting/tab/tab.component.html
+++ b/src/app/views/dashboard/ProfileAndSetting/tab/tab.component.html
@@ -18,3 +18,4 @@
   <app-update-user-profile></app-update-user-profile>
   <app-share-v-card></app-share-v-card>
 </div>
+<app-change-password></app-change-password>
