--- a/src/app/views/dashboard/ProfileAndSetting/profile-setting/profile-setting.component.html
+++ b/src/app/views/dashboard/ProfileAndSetting/profile-setting/profile-setting.component.html
@@ -3,8 +3,8 @@
     <div class="row">
       <div class="col-xs-12 col-md-12 profileWp">
         <div class="profile-pic-wp">
-          <img [src]="userImg" placeholder="../../../../../images/placeholder.png" onerror="this.src='../../../../../images/placeholder.png'" alt=""
-            (click)="onEditProfilePicClick()">
+          <img [src]="userImg" placeholder="../../../../../images/placeholder.png"
+            onerror="this.src='../../../../../images/placeholder.png'" alt="" (click)="onEditProfilePicClick()">
         </div>
         <h4>{{userProfileModel.name}}</h4>
         <span>
@@ -13,7 +13,8 @@
         </span>
         <a>
           <button type="button" class="btn btn-primary edit-but-orange" (click)="onEditProfileClick()"
-            data-toggle="modal" data-target="#editProfileDetails"><img src="../../../../../images/edit-icon.svg" alt="">&nbsp; Edit
+            data-toggle="modal" data-target="#editProfileDetails"><img src="../../../../../images/edit-icon.svg"
+              alt="">&nbsp; Edit
             Profile Details</button>
         </a>
       </div>
@@ -52,7 +53,8 @@
     <div class="row">
       <div class="col-xs-12 col-md-12">
         <div class="ag-detail-icons">
-          <a href=" {{'mailto:'+userProfileModel.email}}" alt=""><img src="../../../../../images/mail-icon.svg" alt=""> &nbsp;
+          <a href=" {{'mailto:'+userProfileModel.email}}" alt=""><img src="../../../../../images/mail-icon.svg" alt="">
+            &nbsp;
             {{userProfileModel.email}}</a>
         </div>
       </div>
@@ -74,7 +76,8 @@
 
       <div class="col-xs-12 col-md-12">
         <div class="ag-detail-icons">
-          <a alt=""><img src="../../../../../images/change_password_icon.svg" alt=""> &nbsp; Change
+          <a alt="" data-toggle="modal" data-target="#changePassword">
+            <img src="../../../../../images/change_password_icon.svg" alt=""> &nbsp; Change
             Password</a>
         </div>
       </div>
@@ -99,5 +102,6 @@
 
   </div>
 
-  
+
 </div>
+
