--- a/src/cssFiles/style.css
+++ b/src/cssFiles/style.css
@@ -1448,7 +1448,7 @@ input:checked+.slider:before {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  color:#000;
+  color: #000;
 }
 
 /* Hide the browser's default checkbox */
@@ -1465,8 +1465,8 @@ input:checked+.slider:before {
   position: absolute;
   top: 0;
   left: 0;
-  height:16px;
-  width:16px;
+  height: 16px;
+  width: 16px;
   /* background-color: #eee; */
   border: solid 1px #F68933;
 }
@@ -1485,13 +1485,14 @@ input:checked+.slider:before {
 
 /* Style the checkmark/indicator */
 .containerBoxCustom .checkmarkCustom:after {
-  left:2px;
-  top:2px;
+  left: 2px;
+  top: 2px;
   width: 10px;
-  height: 10px; 
+  height: 10px;
   border-width: 2px 2px 2px 2px;
   background: #F68933;
 }
+
 /* Inner page Custom checkbox css end here */
 
 
@@ -1531,17 +1532,35 @@ input:checked+.slider:before {
   padding-right: 32px
 }
 
-
-.changePsswdInstruction {
+.passwordRequirements h5 {
   font-size: 12px;
-  color: #a3a3a3;
+  /* color: #a3a3a3; */
   font-weight: normal;
+  color: #000;
+  opacity: 0.8;
+  margin: 0px 0px 5px 0px;
 }
 
-.changePsswdInstruction img {
-  float: left;
-  margin-right: 10px;
-  margin-bottom: 40px;
+.passwordRequirements ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.passwordRequirements ul li {
+  background: url(../images/check-default.svg) no-repeat left;
+  font-size: 12px;
+  font-weight: normal;
+  color: #000;
+  line-height: 18px;
+  /* opacity:0.8; */
+  color: #585858;
+  margin: 0;
+  padding: 0px 0px 0px 25px;
+}
+
+.passwordRequirements ul li.valid {
+  background: url(../images/check-green.svg) no-repeat left;
 }
 
 .modal-body label.rememberM {
@@ -2107,10 +2126,6 @@ input:-internal-autofill-selected {
 
   #shareMyVcard {
     margin-top: 40%;
-  }
-
-  #changePassword {
-    margin-top: 10%;
   }
 
   #filterPopup {
